--- a/styles.css
+++ b/styles.css
@@ -25,21 +25,23 @@
 #final{
     position:relative;
     top:30px;
-    left:460px;
-    width: 600px;
+    left:0x;
+    width: 1520px;
     height: 40px;
     border-style:solid;
     border-width:1px;
+    background-color: white;
 }
 
 #creditos{
     position:relative;
     top:30px;
-    left:460px;
-    width: 600px;
+    left:0px;
+    width: 1520px;
     height: 80px;
     border-style:solid;
     border-width:1px;
+    background-color: white;
 }
 
 .Square{
